static/frontend/unit: fix header title overflow
Long package names caused the header content to flow
in strange ways. Capping the length of the title to
fix the layout.

Fixes golang/go#47219

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/334852
Trust: Jamal Carvalho <jamal@golang.org>

--- a/static/frontend/unit/_header.css
+++ b/static/frontend/unit/_header.css
@@ -4,11 +4,16 @@
  * license that can be found in the LICENSE file.
  */
 
+.UnitHeader-titleHeading {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .UnitHeader-overflowContainer {
   display: none;
   height: 1.5rem;
   position: absolute;
-  right: 1rem;
+  right: 0;
   width: 1.5rem;
 }
 .go-Main-header[data-fixed] .UnitHeader-overflowContainer {
